[tool.isort]
profile = "black"

[tool.poetry]
name = "fingpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "3.11.4"
langserve = { extras = ["server"], version = ">=0.0.30" }
pydantic = "^2.7.4"
yfinance = "^0.2.40"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
sec-api = "^1.0.18"
openai = "^1.35.14"
umap = "^0.1.1"
langchain = "^0.2.8"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.16"
python-dotenv = "^1.0.1"
types-requests = "^2.32.0.20240712"
loguru = "^0.7.2"
loguru-mypy = "^0.0.4"
langfuse = "^2.39.2"
dependency-injector = "^4.41.0"
deepeval = "^0.21.71"
langgraph = "^0.1.14"
aiofiles = "^24.1.0"
gptcache = "^0.1.44"
nemoguardrails = "^0.9.1.1"
seaborn = "^0.13.2"
scipy = "^1.14.0"
aiosqlite = "^0.20.0"
uvicorn = "^0.30.6"
pre-commit = "^3.8.0"
tox = "4.15.0"
pytest-asyncio = "^0.23.8"
aioresponses = "^0.7.6"
thefuzz = "^0.22.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
jupytext = "^1.16.4"
jupyter-contrib-nbextensions = "^0.7.0"
freezegun = "^1.5.1"
pytest = "^8.3.3"
black = "^24.8.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.14.0"}
aiocache = "^0.12.3"
langchain-chroma = "^0.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tox = "4.15.0"
devtools = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
